# swagger_output.json
@@ -362,6 +362,41 @@
         ]
       }
     },
+    "/get-a-game": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Service to get a game",
+        "description": "Service to get a game",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/delete-game": {
       "delete": {
         "tags": [
